--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -13,8 +13,8 @@
   <div class="ui small info message">
     {% blocktrans trimmed %}
       Read the Docs <strong>requires a <code>.readthedocs.yaml</code> file at the root of the repository</strong> to build your project's documentation.
-      Open a pull request in your repository with this file using the following example for your documentation tool, commit, push and merge the changes.
-      Then, come back to this page and finish the process.
+      You can pick an example for your documentation tool as a starting point below,
+      and save and commit it to your repository.
     {% endblocktrans %}
   </div>
 
