--- a/readthedocsext/theme/templates/projects/import_config.html
+++ b/readthedocsext/theme/templates/projects/import_config.html
@@ -12,7 +12,7 @@
 {% block project_add_content_form %}
   <div class="ui small info message">
     {% blocktrans trimmed %}
-      Read the Docs <strong>requires a <code>.readthedocs.yaml</code> file at the root of the repository</strong> to build your project's documentation.
+      A <strong><code>.readthedocs.yaml</code> file is required at the root of the repository</strong> to build your project's documentation.
       You can pick an example for your documentation tool as a starting point below,
       and save and commit it to your repository.
     {% endblocktrans %}
