--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -1,7 +1,7 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
 {% block title %}
   {% trans "Set advertising preferences" %}
