--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -1,14 +1,14 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
 {% block title %}
   {% trans "Set advertising preferences" %}
 {% endblock title %}
 {% block profile_admin_advertising %}
   active
-{% endblock  profile_admin_advertising %}
+{% endblock profile_admin_advertising %}
 {% block edit_content_header %}
   {% trans "Set advertising preferences" %}
 {% endblock edit_content_header %}
@@ -48,7 +48,7 @@
     {% endblocktrans %}
   </p>
 
-  <form class="ui form" method="POST" action=".">
+  <form class="ui form" method="post" action=".">
     {% csrf_token %}
     {{ form|crispy }}
     <input class="ui button"
