--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -1,6 +1,6 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load trans from i18n %}
+{% load trans blocktrans from i18n %}
 {% load crispy from crispy_forms_tags %}
 
 {% block title %}
