Add project: show/hide `team` field based on selected organization
Required by: https://github.com/readthedocs/readthedocs-corporate/pull/1851

--- a/readthedocsext/theme/templates/projects/import_basics.html
+++ b/readthedocsext/theme/templates/projects/import_basics.html
@@ -5,3 +5,7 @@
 {% block project_add_subheader %}
   {% trans "Configure basic project settings" %}
 {% endblock project_add_subheader %}
+
+{% block project_add_data_bind %}
+  data-bind="using: ProjectOrganizationView()"
+{% endblock project_add_data_bind %}
