--- a/readthedocsext/theme/templates/projects/includes/project_image.html
+++ b/readthedocsext/theme/templates/projects/includes/project_image.html
@@ -5,8 +5,8 @@
   to the same image always.
 {% endcomment %}
 
-{% load i18n %}
-{% load static %}
+{% load blocktrans from i18n %}
+{% load static from static %}
 
 {% if project.remote_repository %}
   <img class="ui {{ classes|default_if_none:"small rounded" }} image"
