--- a/readthedocsext/theme/templates/projects/temporary_access_form.html
+++ b/readthedocsext/theme/templates/projects/temporary_access_form.html
@@ -87,4 +87,4 @@
 
     <input class="ui primary button" type="submit" value="{% trans "Save" %}">
   </form>
-{% endblock project_edit_content_subheader %}
+{% endblock project_edit_content %}
