--- a/readthedocsext/theme/templates/projects/temporary_access_form.html
+++ b/readthedocsext/theme/templates/projects/temporary_access_form.html
@@ -1,8 +1,7 @@
 {% extends "projects/temporary_access_list.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
-{% load ext_theme_tags %}
+{% load trans blocktrans from i18n %}
+{% load as_crispy_field as_crispy_errors from crispy_forms_tags %}
 
 {% block project_edit_content_subheader %}
   <div class="ui breadcrumb">
@@ -76,9 +75,13 @@
 
       {% for field in form %}
         {% if field == form.password %}
-          <div class="field" data-bind="visible: show_password_field()">{{ field|as_crispy_field }}</div>
+          <div class="field" data-bind="visible: show_password_field()">
+            {{ field|as_crispy_field }}
+          </div>
         {% elif field == form.versions %}
-          <div class="field" data-bind="visible: show_versions_list()">{{ field|as_crispy_field }}</div>
+          <div class="field" data-bind="visible: show_versions_list()">
+            {{ field|as_crispy_field }}
+          </div>
         {% else %}
           {{ field|as_crispy_field }}
         {% endif %}
@@ -87,4 +90,4 @@
 
     <input class="ui primary button" type="submit" value="{% trans "Save" %}">
   </form>
-{% endblock project_edit_content_subheader %}
+{% endblock project_edit_content %}
