Update from review

--- a/readthedocsext/theme/templates/acl/shared_password_required.html
+++ b/readthedocsext/theme/templates/acl/shared_password_required.html
@@ -23,6 +23,8 @@
   </form>
 
   <p>
-    {% blocktrans %}Already have an account? Then please <a href="//{{ PRODUCTION_DOMAIN }}/accounts/login/">log in</a>.{% endblocktrans %}
+    {% blocktrans trimmed with domain=PRODUCTION_DOMAIN %}
+      Already have an account? Then please <a href="https://{{ domain }}/accounts/login/">log in</a>.
+    {% endblocktrans %}
   </p>
 {% endblock content %}
