Update styles on proxito error pages
This centers the error block and uses more standard styles from cards to
for the content -- namely the header and meta blocks.

--- a/readthedocsext/theme/templates/errors/proxito/404/dns.html
+++ b/readthedocsext/theme/templates/errors/proxito/404/dns.html
@@ -5,7 +5,7 @@
 {% block error_content %}
   <p>
     {% blocktrans trimmed %}
-      This domain was is not recognized, it may not yet be configured.
+      This domain is not recognized, it may not be configured yet.
     {% endblocktrans %}
   </p>
 {% endblock error_content %}
