SAML: list application username in the config
Matches https://github.com/readthedocs/readthedocs-corporate/pull/1872

--- a/readthedocsext/theme/templates/organizations/settings/saml.html
+++ b/readthedocsext/theme/templates/organizations/settings/saml.html
@@ -100,6 +100,19 @@
           </button>
         </div>
       </div>
+      <div class="field">
+        <label>{% trans "Application username" %}</label>
+        <div class="ui fluid action input">
+          <input type="text"
+                 value="Email"
+                 id="saml-application-username"
+                 readonly="true">
+          <button class="ui right icon button"
+                  data-clipboard-target="input#saml-application-username">
+            <i class="fas fa-copy icon"></i>
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
