Add support for proxito error pages (#442)
* Add more extension points on base template for overriding in proxito

* Proxito base template for overriding base template blocks

* Fix import on base template

* First pass updating dashboard error pages

- Refs #411

* Copy dashboard error pages and lightly adapt for proxito

* Tune error page copy for documentation sites

* Only use a home link on pages where it makes sense

Don't put a home link on "project not found" error page, for example.

* Update styles on proxito error pages

This centers the error block and uses more standard styles from cards to
for the content -- namely the header and meta blocks.

* Error status code correction on 4xx/5xx pages

* Add missing 500 template

The base template was showing through.

* Add proxy templates for spam.html

This just uses 410.html, but the views still reference the named
`spam.html` template.

* Add comment on proxito base template

--- a/readthedocsext/theme/templates/errors/proxito/404/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/404/base.html
@@ -1,26 +1,34 @@
 {% extends "errors/proxito/base.html" %}
 
-{% load static %}
-{% load core_tags %}
-{% load i18n %}
+{% load blocktrans trans from i18n %}
 
-{% block title %}{% trans "Page not found" %}{% endblock %}
+{% comment %}
+  This view uses the contextual 404 view handlers currently, but mostly just to
+  get the name of the object that is missing so we can give a more specific
+  error message. Options here are "Project not found", "Version not found", and
+  "Page not found".
+{% endcomment %}
 
-{% block error_status %}404{% endblock %}
+{% block title %}
+  {% blocktrans trimmed with resource=not_found_subject|default:"Page"|capfirst %}
+    {{ resource }} not found
+  {% endblocktrans %}
+{% endblock title %}
+
+{% block error_status %}
+  404
+{% endblock error_status %}
 {% block error_title %}
   {{ block.super }}
-  {% trans "Page not found" %}
+  {% blocktrans trimmed with resource=not_found_subject|default:"Page"|capfirst %}
+    {{ resource }} not found
+  {% endblocktrans %}
 {% endblock error_title %}
-
-{% block error_icon_computer_name %}fa-radar{% endblock %}
-{% block error_icon_mobile_name %}fa-radar{% endblock %}
-{% block error_icon_computer_style %}--fa-primary-color: greenyellow;{% endblock %}
-{% block error_icon_mobile_style %}--fa-primary-color: greenyellow;{% endblock %}
 
 {% block error_content %}
   <p>
-    {% blocktrans trimmed %}
-      The page you requested may no longer exist, may have been moved, or the project may have been deleted.
+    {% blocktrans trimmed with resource=not_found_subject|default:"Page"|lower %}
+      The {{ resource }} you requested does not exist or may have been removed.
     {% endblocktrans %}
   </p>
 {% endblock error_content %}
