--- a/readthedocsext/theme/templates/errors/proxito/base.html
+++ b/readthedocsext/theme/templates/errors/proxito/base.html
@@ -1,28 +1,48 @@
-{% extends "errors/dashboard/base.html" %}
-{% load static %}
+{% extends "proxito/base.html" %}
 
-{% comment %}
-  This is for the 404 error page shown in documentation pages, not the dashboard.
-{% endcomment %}
+{% load static from static %}
+{% load trans from i18n %}
 
-{% load core_tags %}
-{% load i18n %}
+{% block content_title_text %}
+  {% block error_title %}
+    <span class="ui grey text">
+      {% block error_status %}
+      {% endblock error_status %}
+    </span>
+  {% endblock error_title %}
+{% endblock content_title_text %}
 
-{% block header %}
-  <div class="ui basic fitted attached segment">
-    <div class="ui container">
-      <div class="ui middle aligned grid">
-        <div class="four wide computer five wide tablet eleven wide mobile left aligned column">
-          <div class="ui horizontally fitted basic segment">
-            <a href="//{{ PRODUCTION_DOMAIN }}/" aria-label="Read the Docs homepage">
-              <img class="ui image" src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}" width="220" alt="Read the Docs logo"/>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
+{% block content_text %}
+  <div class="meta">
+    {# djlint: off D018 #}
+    <a href="/">{{ request.get_host }}</a>
+    {# djlint: on #}
   </div>
-{% endblock header %}
+  <div class="description">
+    {% block error_content %}
+    {% endblock error_content %}
 
-{% block footer %}
-{% endblock footer %}
+    {% block error_content_help %}
+    {% endblock error_content_help %}
+  </div>
+{% endblock content_text %}
+
+{% block content_extra_text %}
+  {% block content_extra_link %}
+  {% endblock content_extra_link %}
+  {% block content_extra_logo %}
+    <div class="right floated">
+      {# Translators: The image that follows this text is the Read the Docs logo and wordmark. Altogether it should read "Hosted by Read the Docs" #}
+      {% trans "Hosted by" %}
+      {# djlint: off D018 #}
+      <a href="//{{ PRODUCTION_DOMAIN }}/"
+         aria-label="{% trans "Read the Docs" %}">
+        <img class="ui middle aligned image"
+             src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}"
+             width="140"
+             alt="{% trans "Read the Docs logo" %}" />
+      </a>
+      {# djlint: on #}
+    </div>
+  {% endblock content_extra_logo %}
+{% endblock content_extra_text %}
